--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "firebase": "^12.2.1",
+    "framer-motion": "^12.23.13",
     "lucide-react": "^0.542.0",
     "mongodb": "^6.19.0",
     "next": "^15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "react-textarea-autosize": "^8.5.9",
+    "remark-gfm": "^4.0.1",
     "sharp": "^0.34.3"
   },
   "devDependencies": {
