--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.13",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.542.0",
     "mongodb": "^6.19.0",
     "next": "^15.5.2",
@@ -20,7 +21,7 @@
     "react-markdown": "^10.1.0",
     "react-textarea-autosize": "^8.5.9",
     "remark-gfm": "^4.0.1",
-    "sharp": "^0.34.3"
+    "sharp": "0.33.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
