--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.13",
+    "lightningcss": "^1.30.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.542.0",
     "mongodb": "^6.19.0",
